deploy/kubernetes/ssl/books-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: books-server
  name: books-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-server
  strategy: {}
  template:
    metadata:
      labels:
        app: books-server
    spec:
      containers:
      - image: localhost:5001/books-server:0.0.1-SNAPSHOT
        name: books-server
        volumeMounts:
          - name: books-server-config
            mountPath: /workspace/config
            readOnly: true
          - name: books-server-certs
            mountPath: /web-certs
            readOnly: true
          - name: redis-client-certs
            mountPath: /redis-certs
            readOnly: true
        resources: {}
      volumes:
        - name: books-server-config
          configMap:
            name: books-server-config
        - name: books-server-certs
          secret:
            secretName: books-server-certificate
        - name: redis-client-certs
          secret:
            secretName: redis-client-certificate

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: books-server
  name: books-server
spec:
  ports:
  - port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: books-server
  type: ClusterIP
