deploy/kubernetes/ssl/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy: {}
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
        - image: docker.io/bitnami/redis:7.0
          name: redis-ssl
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-server-certs
              mountPath: /redis-certs
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: redis-server-certs
          secret:
            secretName: redis-server-certificate

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    service: redis
  ports:
    - name: "redis-client"
      port: 6379
      targetPort: 6379
